@@ -41,6 +41,10 @@
         </tr>
         </tbody>
     </table>
+    <div>
+        <a href="contexts_MySQL.php?media=class://INTERMediator\DB\Export/productlist"><button>Export (Default)</button></a>
+        <a href="contexts_MySQL.php?media=class://ExportSample/productlist"><button>Export (Custom)</button></a>
+    </div>
 </div>
 </body>
 </html>
