@@ -200,7 +200,7 @@
         <td></td>
     </tr>
     <tr>
-        <td colspan="2">PDF Generating (MediaAccess with class: urls)</td>
+        <td colspan="2">PDF Generating, Exporting (MediaAccess with class: urls)</td>
         <td>
             <a href="Sample_pdf/list_detail_MySQL.html">show(No Auth)</a></a>
         </td>
